syntax = "proto3";

option go_package = "./proto";

service TeamJoinRequestService {
    rpc CreateJoinRequest(TeamJoinRequest) returns (TeamJoinRequest);
    rpc GetJoinRequestById(TeamJoinRequestId) returns (TeamJoinRequest);
    rpc GetAllJoinRequests(Empty) returns (TeamJoinRequestList);
    rpc UpdateJoinRequest(TeamJoinRequest) returns (TeamJoinRequest);
    rpc DeleteJoinRequest(TeamJoinRequestId) returns (TeamJoinRequest);
    rpc ApproveJoinRequest(TeamJoinRequestId) returns (TeamJoinRequest);
    rpc DeclineJoinRequest(TeamJoinRequestId) returns (TeamJoinRequest);
}

message Empty {}

message TeamJoinRequest {
    string id = 1;
    string team_id = 2;
    string student_id = 3;
}

message TeamJoinRequestList {
    repeated TeamJoinRequest join_requests = 1;
}

message TeamJoinRequestId {
    string id = 1;
}
